Updated Data Understanding

--- a/student.ipynb
+++ b/student.ipynb
@@ -71,6 +71,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Box Office Mojo\n",
+    "The dataset in correspondance to the Box Office Mojo in the zipped Data folder is titled \"*bom.movie_gross.csv.gz*\". To explore this files contents Pandas can be used for exploratory analysis. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMDB \n",
+    "The dataset in correspondance to IMDB in the zipped Data folder is a database titled \"*im.db.zip*\". To deal with this dataset SQLite3 in addtion to Pandas must be used for exploratory analysis. The main tables of interest in this database are the movie_basics and movie_ratings tables. These tables contain movie charactertics and measureables for analysis. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotten Tomatoes\n",
+    "The datasets in correspondance to Rotten Tomatoes in the zipped Data foler are \"*rt.movie_info.tsv.gz*\" and \"*rt.reviews.tsv.gz*\". Both files are Table Seperated Value files meaning a delimeter needs to be used to read the files using Pandas. We must also merge both datasets based on their 'id' column in order to explore the full contents of Rotten Tomatoes overall. The id referes to the review of the movie it was conducted on.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TMDB\n",
+    "The dataset in correspondance to TMDB in the zipped Date folder is \"*tmdb.movies.csv.gz*\". To explore this files contents Pandas can be used for exploratory analysis. The id columns titled 'genre_ids' and 'id' are genere names and the movie name identifications. The main identification that is needed for analysis are the genre_ids. The movie name is not needed for analysis but rather the movie characteristics such as genres."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Data Preparation"
    ]
   },
