Updated IMDB Data Understanding

--- a/student.ipynb
+++ b/student.ipynb
@@ -5,14 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Project Submission\n",
-    "\n",
-    "Please fill out:\n",
-    "* Student name: \n",
-    "* Student pace: self paced / part time / full time\n",
-    "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
-    "* Blog post URL:\n"
+    "# Movie Analysis for Movie Production"
    ]
   },
   {
@@ -20,7 +13,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Movie Analysis for Movie Production"
+    "Author: Cristopher Delgado \n",
+    "\n",
+    "Student Pace: self paced/flex \n",
+    "\n",
+    "Scheduled Project review date/time: TBD\n",
+    "\n",
+    "Instructor Name: Jones Morgan\n",
+    "\n",
+    "Blog Post URL: TBD"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This project analyzes movie characteristics such as genres, return on investment (ROI), and ratings. The data analysis performed in this repository is based on datasets from [Box Office Mojo](https://www.boxofficemojo.com/), [IMDB](https://www.imdb.com/), [Rotten Tomatoes](https://www.rottentomatoes.com/), [TheMovieDB](https://www.themoviedb.org/), and [The Numbers](https://www.the-numbers.com/).  "
+    "This project analyzes movie characteristics such as genres, return on investment (ROI), and popularity. The data analysis performed in this repository is based on datasets from [Box Office Mojo](https://www.boxofficemojo.com/), [IMDB](https://www.imdb.com/), [Rotten Tomatoes](https://www.rottentomatoes.com/), [TheMovieDB](https://www.themoviedb.org/), and [The Numbers](https://www.the-numbers.com/).  "
    ]
   },
   {
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
        "4     513900000  2010  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,6 +216,200 @@
    "metadata": {},
    "source": [
     "![movie data erd](https://raw.githubusercontent.com/learn-co-curriculum/dsc-phase-1-project-v2-4/master/movie_data_erd.jpeg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first step would be to unzip the database. The following code can be used to unzip the database and create the .db file. Since its in my current working directory and I do not want another copy of the database it can remain commented out. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Extract our zipped SQL Database\n",
+    "# import zipfile\n",
+    "# # Specify the path to your zip file\n",
+    "# zip_file_path = 'zippedData/im.db.zip'\n",
+    "\n",
+    "# # Open the zip file\n",
+    "# with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "#     # Extract all files from the zip archive\n",
+    "#     zip_ref.extractall('zippedData/')  # Specify the destination folder"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can retrieve the tables 'movie_basics' and 'movie_ratings' using SQLite3 and merge the tables into a dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify the file path \n",
+    "file_path = \"zippedData/im.db\"\n",
+    "\n",
+    "# Connect to SQLite database\n",
+    "conn = sqlite3.connect(file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>primary_title</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>runtime_minutes</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>averagerating</th>\n",
+       "      <th>numvotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>tt0063540</td>\n",
+       "      <td>Sunghursh</td>\n",
+       "      <td>Sunghursh</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Action,Crime,Drama</td>\n",
+       "      <td>tt0063540</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tt0066787</td>\n",
+       "      <td>One Day Before the Rainy Season</td>\n",
+       "      <td>Ashad Ka Ek Din</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>Biography,Drama</td>\n",
+       "      <td>tt0066787</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tt0069049</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>tt0069049</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>4517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tt0069204</td>\n",
+       "      <td>Sabse Bada Sukh</td>\n",
+       "      <td>Sabse Bada Sukh</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Comedy,Drama</td>\n",
+       "      <td>tt0069204</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>tt0100275</td>\n",
+       "      <td>The Wandering Soap Opera</td>\n",
+       "      <td>La Telenovela Errante</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Comedy,Drama,Fantasy</td>\n",
+       "      <td>tt0100275</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    movie_id                    primary_title              original_title  \\\n",
+       "0  tt0063540                        Sunghursh                   Sunghursh   \n",
+       "1  tt0066787  One Day Before the Rainy Season             Ashad Ka Ek Din   \n",
+       "2  tt0069049       The Other Side of the Wind  The Other Side of the Wind   \n",
+       "3  tt0069204                  Sabse Bada Sukh             Sabse Bada Sukh   \n",
+       "4  tt0100275         The Wandering Soap Opera       La Telenovela Errante   \n",
+       "\n",
+       "   start_year  runtime_minutes                genres   movie_id  \\\n",
+       "0        2013            175.0    Action,Crime,Drama  tt0063540   \n",
+       "1        2019            114.0       Biography,Drama  tt0066787   \n",
+       "2        2018            122.0                 Drama  tt0069049   \n",
+       "3        2018              NaN          Comedy,Drama  tt0069204   \n",
+       "4        2017             80.0  Comedy,Drama,Fantasy  tt0100275   \n",
+       "\n",
+       "   averagerating  numvotes  \n",
+       "0            7.0        77  \n",
+       "1            7.2        43  \n",
+       "2            6.9      4517  \n",
+       "3            6.1        13  \n",
+       "4            6.5       119  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"\"\"\n",
+    "        SELECT *\n",
+    "        FROM movie_basics AS mb\n",
+    "        JOIN movie_ratings AS mr ON mb.movie_id = mr.movie_id\n",
+    "        \"\"\"\n",
+    "imdb_ess_df = pd.read_sql(query, conn)\n",
+    "imdb_ess_df.head() "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the IMDB dataframe we can look into insights in regards to the Average Ratings per genre"
    ]
   },
   {
