Updated The Number Description in Data Understanding

--- a/student.ipynb
+++ b/student.ipynb
@@ -805,7 +805,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The Number \n"
+    "#### The Number \n",
+    "The dataset in correspondance to The Number in the zipped Data folder is \"tn.movie_budgets.csv\". To explore this files contents Pandas can be used for exploratory analysis. The main columns of interets are production_budget, domestic_gross, and release_date. "
    ]
   },
   {
