Added RT data cleaning description

--- a/student.ipynb
+++ b/student.ipynb
@@ -959,7 +959,7 @@
    "metadata": {},
    "source": [
     "#### Rotten Tomatoes\n",
-    "To be explained"
+    "The approach to clean up the Rotten Tomatoes datasets is to first drop any columns that are not of interest. This will as a result remove most null values from the Rotten Tomatoes dataframe. The main issue with the merged dataframe are the duplicated movie id's that occured due to many critic reviews on the same movie. Since the critic review is not needed duplicates that contain essential information can be kept while the others reviews can be dropped. The remaininng null values in the columns of interest can be removed by indexing the rows rather than dropping the column. In order to provide insight on the rating_x column we can group the dataframe by rating_x and calculate the box_office avg in correspondance to rating_x. "
    ]
   },
   {
