Added code description for RT Data Cleaning

--- a/student.ipynb
+++ b/student.ipynb
@@ -1008,7 +1008,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The column of interest which is box_office has 21122 missing values. Since this data is based on a movie and not something general we can't neccessarily impute a value. The best decision is to drop those NaN values. Adding on, the merged dataset has multiple reviews for the same movie which is the reason for repeating id values in the id column."
+    "The column of interest which is box_office has 21122 missing values. Since this data is based on a movie and not something general we can't neccessarily impute a value. The best decision is to drop those NaN values."
    ]
   },
   {
@@ -1229,6 +1229,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop unwanted columns that are not needed for the analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1398,6 +1406,14 @@
    "source": [
     "df_rt_dropped = rt_nonduplicate_rt.drop(['synopsis', 'dvd_date', 'studio', 'publisher', 'date'], axis=1, inplace = False)\n",
     "df_rt_dropped.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop the rows that have null values in the box_office column "
    ]
   },
   {
@@ -1571,6 +1587,14 @@
     "df_rt_copy = df_rt_dropped.copy()\n",
     "df_rt = df_rt_copy.dropna(subset=['box_office'], axis=0, inplace=False)\n",
     "df_rt.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sort the dataframe by rating_x "
    ]
   },
   {
@@ -1797,6 +1821,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drop the rating 'NR' as it stands for No Rating suggesting that this value is simply a place holder and acts as a null value."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -1804,6 +1836,14 @@
    "source": [
     "rating_to_drop = 'NR'\n",
     "rt_grouped = rt_grouped.drop(rt_grouped[rt_grouped['rating_x'] == rating_to_drop].index)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract our rating_x values in a list and create a set with the corresponding average box_office sales for each rating. "
    ]
   },
   {
@@ -1840,6 +1880,14 @@
     "\n",
     "print(rating)\n",
     "print(avg_box_office_rating)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extract our months from the release date column and calculate the the monthly box_office average sale. "
    ]
   },
   {
