Updated RT Data Preparation description to quote boxes

--- a/student.ipynb
+++ b/student.ipynb
@@ -1008,7 +1008,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The column of interest which is box_office has 21122 missing values. Since this data is based on a movie and not something general we can't neccessarily impute a value. The best decision is to drop those NaN values."
+    "> The column of interest which is box_office has 21122 missing values. Since this data is based on a movie and not something general we can't neccessarily impute a value. The best decision is to drop those NaN values."
    ]
   },
   {
@@ -1233,7 +1233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Drop unwanted columns that are not needed for the analysis."
+    "> Drop unwanted columns that are not needed for the analysis."
    ]
   },
   {
@@ -1413,7 +1413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Drop the rows that have null values in the box_office column "
+    "> Drop the rows that have null values in the box_office column "
    ]
   },
   {
@@ -1594,7 +1594,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sort the dataframe by rating_x "
+    "> Sort the dataframe by rating_x "
    ]
   },
   {
@@ -1825,7 +1825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Drop the rating 'NR' as it stands for No Rating suggesting that this value is simply a place holder and acts as a null value."
+    "> Drop the rating 'NR' as it stands for No Rating suggesting that this value is simply a place holder and acts as a null value."
    ]
   },
   {
@@ -1843,7 +1843,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract our rating_x values in a list and create a set with the corresponding average box_office sales for each rating. "
+    "> Extract our rating_x values in a list and create a set with the corresponding average box_office sales for each rating. "
    ]
   },
   {
@@ -1887,7 +1887,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract our months from the release date column and calculate the the monthly box_office average sale. "
+    "> Extract the months from the release date column and calculate the the monthly box_office average sale. "
    ]
   },
   {
