Updated Heading Level for Data Analysis Section

--- a/student.ipynb
+++ b/student.ipynb
@@ -2351,7 +2351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Genre vs Popularity Score "
+    "### Genre vs Popularity Score "
    ]
   },
   {
@@ -2387,7 +2387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sales Bases on Appropriate Audience"
+    "### Sales Bases on Appropriate Audience"
    ]
   },
   {
@@ -2422,7 +2422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sales Bases on Month throughout the Year"
+    "### Sales Bases on Month throughout the Year"
    ]
   },
   {
