--- a/student.ipynb
+++ b/student.ipynb
@@ -954,6 +954,231 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "movie_id              0\n",
+       "primary_title         0\n",
+       "original_title        0\n",
+       "start_year            0\n",
+       "runtime_minutes    7620\n",
+       "genres              804\n",
+       "movie_id              0\n",
+       "averagerating         0\n",
+       "numvotes              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb_ess_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imdb_ess_df.dropna(subset=['genres'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imdb_ess_df.drop(labels=['movie_id', 'original_title'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>primary_title</th>\n",
+       "      <th>start_year</th>\n",
+       "      <th>runtime_minutes</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>averagerating</th>\n",
+       "      <th>numvotes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sunghursh</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>Action,Crime,Drama</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>One Day Before the Rainy Season</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>Biography,Drama</td>\n",
+       "      <td>7.2</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The Other Side of the Wind</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>Drama</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>4517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sabse Bada Sukh</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Comedy,Drama</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The Wandering Soap Opera</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Comedy,Drama,Fantasy</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73850</th>\n",
+       "      <td>Swarm Season</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73851</th>\n",
+       "      <td>Diabolik sono io</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>6.2</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73852</th>\n",
+       "      <td>Sokagin Çocuklari</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Drama,Family</td>\n",
+       "      <td>8.7</td>\n",
+       "      <td>136</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73853</th>\n",
+       "      <td>Albatross</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73855</th>\n",
+       "      <td>Drømmeland</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>Documentary</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>73052 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         primary_title  start_year  runtime_minutes  \\\n",
+       "0                            Sunghursh        2013            175.0   \n",
+       "1      One Day Before the Rainy Season        2019            114.0   \n",
+       "2           The Other Side of the Wind        2018            122.0   \n",
+       "3                      Sabse Bada Sukh        2018              NaN   \n",
+       "4             The Wandering Soap Opera        2017             80.0   \n",
+       "...                                ...         ...              ...   \n",
+       "73850                     Swarm Season        2019             86.0   \n",
+       "73851                 Diabolik sono io        2019             75.0   \n",
+       "73852                Sokagin Çocuklari        2019             98.0   \n",
+       "73853                        Albatross        2017              NaN   \n",
+       "73855                       Drømmeland        2019             72.0   \n",
+       "\n",
+       "                     genres  averagerating  numvotes  \n",
+       "0        Action,Crime,Drama            7.0        77  \n",
+       "1           Biography,Drama            7.2        43  \n",
+       "2                     Drama            6.9      4517  \n",
+       "3              Comedy,Drama            6.1        13  \n",
+       "4      Comedy,Drama,Fantasy            6.5       119  \n",
+       "...                     ...            ...       ...  \n",
+       "73850           Documentary            6.2         5  \n",
+       "73851           Documentary            6.2         6  \n",
+       "73852          Drama,Family            8.7       136  \n",
+       "73853           Documentary            8.5         8  \n",
+       "73855           Documentary            6.5        11  \n",
+       "\n",
+       "[73052 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb_ess_df"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
