Updated Data Prep IMDB

--- a/student.ipynb
+++ b/student.ipynb
@@ -950,7 +950,7 @@
    "metadata": {},
    "source": [
     "#### IMDB\n",
-    "To be explained"
+    "With the dataframe the first step for preparation is to identify any null values in the dataframe. Drop the null values based on row for the genre column and drop the columns movie_id and original_title since they are not needed for the analysis. "
    ]
   },
   {
