Updated Conclusion Section

--- a/student.ipynb
+++ b/student.ipynb
@@ -2744,16 +2744,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conclusions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here - remember to use markdown cells for comments as well!"
+    "## Conclusions\n",
+    "This analysis has lead to three recommendations for Microsofts's new movie production studio:\n",
+    "\n",
+    "- **Make movies with the following genres: Western, Romance, History, Animation, Family, Mystery, Thriller, Science Fiction, War, Crime, Fantasy, Action, Adventure.** These genres had a popularity score of 40 percent or higher which according to TMDB is considered good through excellent. \n",
+    "- **Make movies with the intended Audience of PG-13 and PG.** These intended audience ratings proved to have the higher box office sales in comparison to rated R and G movies. \n",
+    "- **Release movies in the summer time as well as the end of the year.** The time of the year matters when releasing movies. We can see this occur in the months of May, June, July, November, December and February. "
    ]
   }
  ],
