--- a/student.ipynb
+++ b/student.ipynb
@@ -940,30 +940,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Box Office Mojo \n",
-    "To be explianed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### IMDB\n",
-    "With the dataframe the first step for preparation is to identify any null values in the dataframe. Drop the null values based on row for the genre column and drop the columns movie_id and original_title since they are not needed for the analysis. "
+    "With the dataframe created the first step for preparation is to identify any null values in the dataframe. Drop the null values based on row for the genre column and drop the columns movie_id and original_title since they are not needed for the analysis. "
    ]
   },
   {
