Added code description for TN

--- a/student.ipynb
+++ b/student.ipynb
@@ -2603,7 +2603,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extract the "
+    "> Extract the realease dates from the release date column. Using datetime format the month can be extracted and used for analysis. "
    ]
   },
   {
@@ -2803,6 +2803,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Drop the unwanted columns that are not of interest. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -2942,6 +2950,14 @@
    "source": [
     "tn_movie_copy.drop(['release_date', 'id', 'movie'], axis=1, inplace=True)\n",
     "tn_movie_copy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The columns that contain 'numbers' are in reality a single string. Clean the columns by removing any non-digit or non-decimal point characters and convert the cleaned values to numeric types. "
    ]
   },
   {
@@ -3099,6 +3115,14 @@
     "tn_movie_copy['domestic_gross'] = pd.to_numeric(tn_movie_copy['domestic_gross'].str.replace('[^\\d.]', ''), errors='coerce')\n",
     "tn_movie_copy['worldwide_gross'] = pd.to_numeric(tn_movie_copy['worldwide_gross'].str.replace('[^\\d.]', ''), errors='coerce')\n",
     "tn_movie_copy"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> With the column values now set as numeric the ROI can be calculated."
    ]
   },
   {
